[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/main_menu_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/menu_manager.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/controls_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/options_menu.tscn" type="PackedScene" id=4]

[node name="MainMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="MenuContainer" parent="." instance=ExtResource( 1 )]

[node name="OptionsMenu" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 360.0

[node name="ControlsMenu" parent="." instance=ExtResource( 3 )]
